; ModuleID = '/home/carl/AnghaBench/8cc/extr_utiltest.c_test_dict.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_utiltest.c_test_dict.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"abc\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"xyz\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_dict to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_dict() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32* (...) @make_dict()
  store i32* %2, i32** %1, align 8
  %3 = load i32*, i32** %1, align 8
  %4 = call i64 @dict_get(i32* %3, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @assert_null(i64 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @dict_put(i32* %6, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* inttoptr (i64 50 to i8*))
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @dict_put(i32* %8, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* inttoptr (i64 70 to i8*))
  %10 = load i32*, i32** %1, align 8
  %11 = call i64 @dict_get(i32* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @assert_int(i32 50, i64 %11)
  %13 = load i32*, i32** %1, align 8
  %14 = call i64 @dict_get(i32* %13, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  %15 = call i32 @assert_int(i32 70, i64 %14)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @dict_keys(i32* %16)
  %18 = call i64 @vec_len(i32 %17)
  %19 = call i32 @assert_int(i32 2, i64 %18)
  ret void
}

declare dso_local i32* @make_dict(...) #1

declare dso_local i32 @assert_null(i64) #1

declare dso_local i64 @dict_get(i32*, i8*) #1

declare dso_local i32 @dict_put(i32*, i8*, i8*) #1

declare dso_local i32 @assert_int(i32, i64) #1

declare dso_local i64 @vec_len(i32) #1

declare dso_local i32 @dict_keys(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
